oj1.04o, plot objectj results